// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SqlAuditFields should match snapshot when needSqlAuditService and needAuditForSqlQuery are both true 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <section
      class="css-bspaai"
    >
      <div
        class="ant-space ant-space-vertical css-p6lj5j"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 8px;"
        >
          <h1
            class="ant-typography css-1eepp70"
          >
            SQL审核配置
          </h1>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary"
          >
            管理不同业务场景下SQL执行所需遵循的审核规则，实现精细化管控
          </span>
        </div>
      </div>
      <div
        class="css-uxdxum"
      >
        <div
          class="ant-form-item has-label-tip top-switch no-margin-field css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="needSqlAuditService"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    是否开启SQL审核业务
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    关闭后将禁用所用场景的SQL审核
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="true"
                    class="ant-switch basic-switch-wrapper audit-confirm-switch css-g6dhbn ant-switch-checked"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="audit-configuration-wrapper"
        >
          <div
            class="audit-fields-wrapper"
          >
            <div
              class="ant-form-item css-1jlm9cy ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="ruleTemplateId"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="ruleTemplateName"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        SQL上线审核规则模板
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        此功能强制开启审核，请为上线流程选择规则模板
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="ruleTemplateName_list_0"
                              aria-autocomplete="list"
                              aria-controls="ruleTemplateName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="ruleTemplateName_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="ruleTemplateName"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择SQL上线审核规则模板
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="dataExportRuleTemplateId"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="dataExportRuleTemplateName"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        数据导出审核规则模板
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        此功能强制开启审核，请为数据导出选择规则模板
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="dataExportRuleTemplateName_list_0"
                              aria-autocomplete="list"
                              aria-controls="dataExportRuleTemplateName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="dataExportRuleTemplateName_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="dataExportRuleTemplateName"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择数据导出审核规则模板
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="workbench-audit-fields"
          >
            <div
              class="ant-form-item has-label-tip top-switch no-margin-field css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="needAuditForSqlQuery"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        工作台查询审核
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        用于SQL工作台实时查询，可按需启用
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="true"
                        class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                        id="needAuditForSqlQuery"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="workbench-audit-content"
            >
              <div
                class="ant-form-item css-1jlm9cy ant-form-item-hidden"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          class="ant-input basic-input-wrapper css-1pd1cd5"
                          id="workbenchTemplateId"
                          placeholder="请输入{{name}}"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item has-required-style css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-required"
                      for="workbenchTemplateName"
                      title="工作台查询审核规则模板"
                    >
                      工作台查询审核规则模板
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="workbenchTemplateName_list_0"
                                aria-autocomplete="list"
                                aria-controls="workbenchTemplateName_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="workbenchTemplateName_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="workbenchTemplateName"
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择工作台查询审核规则模板
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item has-required-style has-label-tip no-margin-field css-1jlm9cy"
              >
                <div
                  class="ant-row ant-form-item-row"
                >
                  <div
                    class="ant-col ant-form-item-label"
                  >
                    <label
                      class="ant-form-item-required"
                      for="allowQueryWhenLessThanAuditLevel"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <div>
                          自动放行的最高审核等级
                        </div>
                        <div
                          class="tip-content-box"
                        >
                          低于或等于此等级的审核结果将自动放行
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="basic-select-container has-prefix css-12vdeki"
                        >
                          <span
                            class="basic-select-prefix"
                          >
                            <svg
                              class="FaLessThanEqualOutlined_svg__icon"
                              height="16"
                              viewBox="0 0 1024 1024"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M902.3 609.9 303.2 391.8l599.1-218.1c29.3-10.7 44.4-43 33.7-72.3S893 57 863.7 67.7l-742 270.2c-23.2 8.5-37.5 30.6-37.1 54-.4 23.4 13.9 45.5 37.1 54L863.8 716c29.3 10.7 61.6-4.4 72.3-33.7 10.6-29.4-4.5-61.7-33.8-72.4m0 240.3L160.2 580.1c-29.3-10.7-61.6 4.4-72.3 33.7s4.4 61.6 33.7 72.3l742.1 270.1c29.3 10.7 61.6-4.4 72.3-33.7 10.7-29.2-4.4-61.6-33.7-72.3"
                                fill="#D8D8D8"
                              />
                            </svg>
                          </span>
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="allowQueryWhenLessThanAuditLevel_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="allowQueryWhenLessThanAuditLevel_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="allowQueryWhenLessThanAuditLevel_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="allowQueryWhenLessThanAuditLevel"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </form>
</div>
`;

exports[`SqlAuditFields should match snapshot when needSqlAuditService is false 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <section
      class="css-bspaai"
    >
      <div
        class="ant-space ant-space-vertical css-p6lj5j"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 8px;"
        >
          <h1
            class="ant-typography css-1eepp70"
          >
            SQL审核配置
          </h1>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary"
          >
            管理不同业务场景下SQL执行所需遵循的审核规则，实现精细化管控
          </span>
        </div>
      </div>
      <div
        class="css-uxdxum"
      >
        <div
          class="ant-form-item has-label-tip top-switch no-margin-field css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="needSqlAuditService"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    是否开启SQL审核业务
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    关闭后将禁用所用场景的SQL审核
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch basic-switch-wrapper audit-confirm-switch css-g6dhbn"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </form>
</div>
`;

exports[`SqlAuditFields should match snapshot when needSqlAuditService is true 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <section
      class="css-bspaai"
    >
      <div
        class="ant-space ant-space-vertical css-p6lj5j"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 8px;"
        >
          <h1
            class="ant-typography css-1eepp70"
          >
            SQL审核配置
          </h1>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-secondary"
          >
            管理不同业务场景下SQL执行所需遵循的审核规则，实现精细化管控
          </span>
        </div>
      </div>
      <div
        class="css-uxdxum"
      >
        <div
          class="ant-form-item has-label-tip top-switch no-margin-field css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="needSqlAuditService"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    是否开启SQL审核业务
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    关闭后将禁用所用场景的SQL审核
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="true"
                    class="ant-switch basic-switch-wrapper audit-confirm-switch css-g6dhbn ant-switch-checked"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    >
                      <span
                        class="ant-switch-inner-checked"
                      />
                      <span
                        class="ant-switch-inner-unchecked"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="audit-configuration-wrapper"
        >
          <div
            class="audit-fields-wrapper"
          >
            <div
              class="ant-form-item css-1jlm9cy ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="ruleTemplateId"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="ruleTemplateName"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        SQL上线审核规则模板
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        此功能强制开启审核，请为上线流程选择规则模板
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="ruleTemplateName_list_0"
                              aria-autocomplete="list"
                              aria-controls="ruleTemplateName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="ruleTemplateName_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="ruleTemplateName"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择SQL上线审核规则模板
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input basic-input-wrapper css-1pd1cd5"
                        id="dataExportRuleTemplateId"
                        placeholder="请输入{{name}}"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="dataExportRuleTemplateName"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        数据导出审核规则模板
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        此功能强制开启审核，请为数据导出选择规则模板
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="dataExportRuleTemplateName_list_0"
                              aria-autocomplete="list"
                              aria-controls="dataExportRuleTemplateName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="dataExportRuleTemplateName_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="dataExportRuleTemplateName"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择数据导出审核规则模板
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="workbench-audit-fields"
          >
            <div
              class="ant-form-item has-label-tip top-switch no-margin-field css-1jlm9cy"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="needAuditForSqlQuery"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        工作台查询审核
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        用于SQL工作台实时查询，可按需启用
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn"
                        id="needAuditForSqlQuery"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </form>
</div>
`;
